--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -1,28 +1,28 @@
 <div class="page-wrapper">
+
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a routerLink="/products">
-        <img
-          src="assets/images/logo.png"
-          alt="luv2shop"
-          class="img-responsive"
-        />
+        <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
+
     <app-product-category-menu></app-product-category-menu>
+
   </aside>
   <!-- END MENU SIDEBAR-->
 
-  <!-- PAGE CONTAINER-->
   <div class="page-container">
     <!-- HEADER DESKTOP-->
     <header class="header-desktop">
       <div class="section-content section-content-p30">
         <div class="container-fluid">
           <div class="header-wrap">
-            
+
             <app-search></app-search>
+
+            <app-login-status></app-login-status>
 
             <app-cart-status></app-cart-status>
 
@@ -35,9 +35,11 @@
 
     <!-- MAIN CONTENT-->
     <router-outlet></router-outlet>
+
   </div>
 </div>
-<!-- END PAGE CONTAINER-->
+
+<!-- ENDS PAGE CONTAINER -->
 
 <footer>
   <ul>
