feat: payment processing

--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -318,125 +318,13 @@
         </div>
 
         <!-- Credit Card -->
+        <!-- Stripe Elements -->
         <div formGroupName="creditCard" class="form-area">
-          <h3>Credit Card</h3>
-
-          <div class="row">
-            <div class="col-md-2"><label>Card Type</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <select formControlName="cardType">
-                  <option>Visa</option>
-                  <option>Mastercard</option>
-                </select>
-
-                <div *ngIf="creditCardType?.invalid &&(creditCardType?.dirty ||creditCardType?.touched)"
-                  class="alert alert-danger mt-1">
-                  <div *ngIf="creditCardType?.errors?.['required']">
-                    Card type is required
-                  </div>
-                </div>
-
-              </div>
-            </div>
+          <h3>Credit or Debit Card</h3>
+          <div id="card-element">
+            <!-- insert stripe elements -->
           </div>
-
-          <div class="row">
-            <div class="col-md-2"><label>Name on Card</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <input formControlName="nameOnCard" type="text" />
-
-                <div
-                  *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)"
-                  class="alert alert-danger mt-1">
-
-                  <div
-                    *ngIf="creditCardNameOnCard?.errors?.['required'] || creditCardNameOnCard?.errors?.['notOnlyWhitespace']">
-                    Name on card is required
-                  </div>
-
-                  <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
-                    At least 2 characters are required
-                  </div>
-
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-2"><label>Card Number</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <input formControlName="cardNumber" type="text" />
-
-                <div *ngIf="creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)"
-                  class="alert alert-danger mt-1">
-
-                  <div *ngIf="creditCardNumber?.errors?.['required']">
-                    Card number is required
-                  </div>
-
-                  <div *ngIf="creditCardNumber?.errors?.['pattern']">
-                    Card number must be 16 digits long
-                  </div>
-
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-2"><label>Security Code</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <input formControlName="securityCode" type="text" />
-
-                  <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)"
-                    class="alert alert-danger mt-1">
-                    <div *ngIf="creditCardSecurityCode?.errors?.['required']">
-                      Security code is required
-                    </div>
-                    <div *ngIf="creditCardSecurityCode?.errors?.['pattern']">
-                      Security code must be 3 digits long
-                    </div>
-                  </div>
-                
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-2"><label>Expiration Month</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <select formControlName="expirationMonth">
-                  <option *ngFor="let month of creditCardMonths">
-                    {{ month }}
-                  </option>
-                </select>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-2"><label>Expiration Year</label></div>
-            <div class="col-md-9">
-              <div class="input-space">
-                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
-                  <option *ngFor="let year of creditCardYears">
-                    {{ year }}
-                  </option>
-                </select>
-
-
-
-              </div>
-            </div>
-          </div>
+          <div id="card-errors" class="displayError.textContent!=='': 'alert alert-danger mt-1'"></div>
         </div>
 
         <!-- Order details -->
@@ -450,7 +338,7 @@
 
         <!-- submit button-->
         <div class="text-center">
-          <button type="submit" class="btn btn-info">Purchase</button>
+          <button type="submit" class="btn btn-info" [disabled]="isDisabled">Purchase</button>
         </div>
       </form>
     </div>
