--- a/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -1,14 +1,18 @@
-<div class="detail-section">
-  <div class="container-fluid">
-    <img src="{{ product.imageUrl}}" class="detail-img" alt="" />
-    <h3>{{ product.name }}</h3>
-    <div class="price">
-      {{ product.unitPrice | currency : "USD" }}
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <div class="container-fluid">
+      <img src="{{ product.imageUrl }}" class="detail-img" alt="" />
+      <h3>{{ product.name }}</h3>
+      <div class="price">
+        {{ product.unitPrice | currency : "USD" }}
+      </div>
+      <button (click)="addToCart()" class="btn btn-primary btn-sm">
+        Add to cart
+      </button>
+      <hr />
+      <h4>Description</h4>
+      <p>{{ product.description }}</p>
+      <a href="" routerLink="/products" class="btn btn-primary btn-sm">Back to Product List</a>
     </div>
-    <button (click)="addToCart()" class="btn btn-primary btn-sm">Add to cart</button>
-    <hr />
-    <h4>Description</h4>
-    <p>{{ product.description }}</p>
-    <a href="" routerLink="/products" class="mt-5">Back to Product List</a>
   </div>
 </div>
