--- a/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -1,9 +1,7 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
-
       <div *ngIf="cartItems.length > 0">
-
         <table class="table table-bordered">
           <thead>
             <tr>
@@ -15,45 +13,65 @@
 
           <tbody>
             <tr *ngFor="let tempCartItem of cartItems">
-              <td>
-                <img src="{{ tempCartItem.imageUrl }}" class="img-responsive" width="150px" />
+              <td class="text-center">
+                <img
+                  src="{{ tempCartItem.imageUrl }}"
+                  class="img-fluid"
+                  style="max-width: 150px"
+                />
               </td>
+
               <td>
                 <p>{{ tempCartItem.name }}</p>
-                <p>{{ tempCartItem.unitPrice | currency: 'USD' }}</p>
+                <p>{{ tempCartItem.unitPrice | currency : "USD" }}</p>
               </td>
               <td>
                 <div class="items">
-                  <label>Quantity:</label>
+                  <label class="d-block">Quantity:</label>
 
-                  <div class="row no-gutters">
-
-                    <div class="col">
-                      <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                  <div class="row align-items-center">
+                    <div class="col-auto">
+                      <button
+                        (click)="decrementQuantity(tempCartItem)"
+                        class="btn btn-primary btn-sm"
+                      >
                         <i class="fas fa-minus"></i>
                       </button>
                     </div>
 
-                    <div class="col ml-4 mr-2">
-                      {{ tempCartItem.quantity }}
+                    <div class="col-auto">
+                      <span class="quantity">{{ tempCartItem.quantity }}</span>
                     </div>
 
-                    <div class="col">
-                      <button (click)="incrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                    <div class="col-auto">
+                      <button
+                        (click)="incrementQuantity(tempCartItem)"
+                        class="btn btn-primary btn-sm"
+                      >
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
-
-                    <div class="col-8"></div>
                   </div>
-
                 </div>
 
                 <div>
-                  <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
+                  <button
+                    (click)="remove(tempCartItem)"
+                    class="btn btn-primary btn-sm mt-2"
+                  >
+                    Remove
+                  </button>
                 </div>
 
-                <p class="mt-2">Subtotal: {{ tempCartItem.quantity! * tempCartItem?.unitPrice! | currency: 'USD' }}</p>
+                <p class="mt-2">
+                  Subtotal:
+                  <span class="subtotal">
+                    {{
+                      tempCartItem.quantity! * tempCartItem?.unitPrice!
+                        | currency : "USD"
+                    }}
+                  </span>
+                </p>
               </td>
             </tr>
             <tr>
@@ -61,7 +79,7 @@
               <td style="font-weight: bold">
                 <p>Total Quantity: {{ totalQuantity }}</p>
                 <p>Shipping: FREE</p>
-                <p>Total Price: {{ totalPrice | currency: 'USD' }}</p>
+                <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
 
                 <div>
                   <a routerLink="/checkout" class="btn btn-primary">Checkout</a>
@@ -69,19 +87,17 @@
               </td>
             </tr>
           </tbody>
-
-
-
-
         </table>
-
       </div>
 
       <!-- if cart is empty then display a message -->
-      <div *ngIf="cartItems.length == 0" class="alert alert-warning col-md-12" role="alert">
+      <div
+        *ngIf="cartItems.length == 0"
+        class="alert alert-warning col-md-12"
+        role="alert"
+      >
         Your shopping cart is empty.
       </div>
-
     </div>
   </div>
 </div>
