--- a/03-frontend/angular-ecommerce/src/app/components/members-page/members-page.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/members-page/members-page.component.html
@@ -1,7 +1,15 @@
 <div class="main-content">
-    <div align = "center" class="alert alert-warning col-md-12" role="alert">
-        <h3>Members Special</h3>
-        <p>Thank you for being a member</p>
-        <p>Member discounts are coming soon!</p>
+    <div class="section-content section-content-p30">
+        <div class="container-fluid">
+
+
+
+            <div align="center" class="alert alert-warning col-md-12" role="alert">
+                <h3>Members Special</h3>
+                <p>Thank you for being a member</p>
+                <p>Member discounts are coming soon!</p>
+            </div>
+        </div>
     </div>
+
 </div>
