--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -1,69 +1,57 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
-      <div class="row">
-
+      <div class="row g-4 justify-content-center">
         <!-- loop over the collection of products -->
-        <div *ngFor="let tempProduct of products" class="col-md-3">
-
-          <div class="product-box">
-
-            <a routerLink="/products/{{ tempProduct.id }}">
-              <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
+        <div *ngFor="let tempProduct of products" class="col-custom">
+          <div class="card h-100 shadow-sm product-box border-0 d-flex flex-column">
+            <a routerLink="/products/{{ tempProduct.id }}"
+              class="text-decoration-none d-flex justify-content-center align-items-center">
+              <img src="{{ tempProduct.imageUrl }}" class="card-img-top img-fluid" alt="{{ tempProduct.name }}">
             </a>
+            <div class="card-body text-center flex-grow-1 d-flex flex-column justify-content-between">
+              <div>
+                <a routerLink="/products/{{ tempProduct.id }}" class="text-decoration-none text-dark">
+                  <h5 class="card-title">{{ tempProduct.name }}</h5>
+                </a>
+                <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
 
-            <a routerLink="/products/{{ tempProduct.id }}">
-              <h1>{{ tempProduct.name }}</h1>
-            </a>
-
-            <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
-            <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm">Add to cart</button>
+              </div>
+              <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm align-self-center">Add to
+                cart</button>
+            </div>
           </div>
-
         </div>
 
         <!-- if products empty then display a message-->
         <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
           No products found.
         </div>
-
       </div>
 
       <!-- begin footer -->
-      <div class="footer-pagination">
-        <div class="row">
-          <div class="col-md-6"></div>
-
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-9" style="padding-left: 30%">
-
-                <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize" [collectionSize]="theTotalElements"
-                  [maxSize]="5" [boundaryLinks]="true" (pageChange)="listProducts()">
-
-                </ngb-pagination>
-
-              </div>
-
-              <div class="col-md-3 mt-2" style="text-align: right;">
-                <span class="mr-2">Page Size</span>
-
-                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
-                  <option>2</option>
-                  <option selected="true">5</option>
-                  <option>10</option>
-                  <option>20</option>
-                  <option>50</option>
-                </select>
-              </div>
-
-            </div>
+      <div class="footer-pagination mt-4">
+        <div class="row justify-content-between">
+          <div class="col-auto d-flex align-items-center">
+            <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize" [collectionSize]="theTotalElements"
+              [maxSize]="5" [boundaryLinks]="true" (pageChange)="listProducts()" class="mt-3">
+            </ngb-pagination>
           </div>
-
+          <div class="col-auto d-flex align-items-center mt-2 mt-md-0 ms-3">
+            <span class="me-2">Page Size</span>
+            <select #myPageSelect (change)="updatePageSize(myPageSelect.value)"
+              class="form-select form-select-sm w-auto">
+              <option>2</option>
+              <option>5</option>
+              <option selected="true">10</option>
+              <option>20</option>
+              <option>50</option>
+            </select>
+          </div>
         </div>
       </div>
-      <!-- end footer -->
 
+      <!-- end footer -->
     </div>
   </div>
 </div>
